# be_better_x

./: .dockerignore  LICENSE  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml
infrastructure/cli/: .env.dist  common.sh  coverage.sh  run_tests.sh
infrastructure/docker/: Dockerfile  docker-compose.yml
src/be_better/: x.py
tests/: conftest.py
tests/cli/: common.sh  coverage.sh  run_integration_tests.sh  run_tests.sh  run_unit_tests.sh
tests/functional/: test_y.py
tests/functional/features/: features_test.py
tests/functional/features/metrics_and_status/: status.feature
tests/functional/steps/: __init__.py  status_steps_test.py
tests/unit/: test_x.py
