[tool.poetry]
name = "be-better"
version = "1.0.0"
description = ""
authors = ["Adam Puza <adam.puza@gmail.com>"]
readme = "README.md"
packages = [
    { include = "be_better", from = "src" },
    { include = "tests" },
]

[tool.poetry.dependencies]
python = "^3.12"
pytest-bdd = "^7.0.1"
pytest-cov = "^4.1.0"
pylint = "^3.0.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
black = "^23.11.0"
isort = "^5.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = "infrastructure/cli/.env"

[tool.poe.tasks]
test = "infrastructure/cli/run_tests.sh"
live_reload_test = "infrastructure/cli/run_tests.sh -r"
coverage = "infrastructure/cli/coverage.sh"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "unit",
    "gherkin",
]